# qis_risk_report

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/commands/: changelog.md
config/: settings.yaml
data/: factors.csv  portfolio_returns.csv  returns.csv  weights.csv
notebooks/: risk_report.ipynb
specs/: mission.md  roadmap.md  tech-stack.md
specs/2026-05-21-attribution-scenario/: plan.md  requirements.md  validation.md
specs/2026-05-21-core-risk-metrics/: plan.md  requirements.md  validation.md
specs/2026-05-21-portfolio-risk-contribution/: plan.md  requirements.md  validation.md
specs/2026-05-21-report-generation/: plan.md  requirements.md  validation.md
specs/2026-05-23-report-content/: plan.md  requirements.md  validation.md
specs/2026-05-26-data-contract-realignment/: plan.md  requirements.md  validation.md
src/qis_risk_report/: __init__.py  cli.py
src/qis_risk_report/data/: __init__.py  bloomberg.py  loaders.py
src/qis_risk_report/reports/: charts.py  generator.py
src/qis_risk_report/risk/: __init__.py  attribution.py  metrics.py  portfolio.py  scenarios.py
tests/: conftest.py  test_attribution.py  test_metrics.py  test_portfolio.py  test_report_generation.py  test_scenarios.py  test_smoke_report.py
tests/fixtures/: component_var_expected.csv  factors_90d.csv  marginal_var_expected.csv  portfolio_correlation_expected.csv  portfolio_returns.csv  returns_20d.csv  returns_5d_simple.csv  returns_attribution_90d.csv  returns_contrib_10d.csv  returns_scenario_30d.csv  weights.csv
