[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "qis-risk-report"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "weasyprint>=62",          # HTML → PDF
    "click>=8.1",              # CLI
]

[project.optional-dependencies]
bloomberg = [
    "blpapi>=3.19",            # Bloomberg API (requires separate Bloomberg install)
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
]

[project.scripts]
qis-risk-report = "qis_risk_report.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=qis_risk_report --cov-report=term-missing"
